Undo revision 6821 by [[Special:Contributions/84.185.223.254|84.185.223.254]] ([[User talk:84.185.223.254|Talk]]) падежная форма таки на -ѩ

--- a/Роусє.mw
+++ b/Роусє.mw
@@ -1,4 +1,4 @@
-'''Рѹсе''' ѥстъ градъ [[Блъгарї]]. Людии обитаѥтъ 150 тысѫщь.
+'''Рѹсе''' ѥстъ градъ [[Блъгарї|Блъгарїѩ]]. Людии обитаѥтъ 150 тысѫщь.
 
 [[Катигорї:Гради]]
 [[Катигорї:Блъгарї]]
