*Empty MediaWiki Message*

--- a/Хоръ_Аха.mw
+++ b/Хоръ_Аха.mw
@@ -1,3 +1,5 @@
 '''Хоръ-Аха.'''
 
-Хоръ-Аха бѣ фараѡнъ [[Прьваıа дѵнастиıа Егѵпьта|прьваѩ дѵнастиѩ]] [[ Егѵпьтъ|Егѵпьта]] кыи осныва градъ [[Мемъфисъ|Мемъфисъ]].
+Хоръ-Аха бѣ фараѡнъ [[Прьваıа дѵнастиıа Егѵпьта|прьваѩ дѵнастиѩ]] [[Егѷптъ|Егѷпьта]] кыи осныва градъ [[Мемъфисъ|Мемъфисъ]].
+
+[[Category:Егѷптъ]]
