*Empty MediaWiki Message*

--- a/Рила.mw
+++ b/Рила.mw
@@ -1,10 +1,9 @@
-Рила гора Блъгарї ?есть (2925 м - [[Мусала]]).
+Рила гора Блъгарї есть (2925 м - [[Мусала]]).
 
 [[Катигорї:Блъгарї]]
 
 [[bg:Рила]]
 [[cs:Rila]]
-[[cu:Рила]]
 [[de:Rila]]
 [[en:Rila]]
 [[es:Montañas Rila]]
