--- a/Чаталхѷюкъ.mw
+++ b/Чаталхѷюкъ.mw
@@ -1,1 +1,2 @@
-Чаталъ-Хѷюкъ прьво село въ Анатолїи ѥстъ ѥже девѧтию тысѧщь лѣтъ назадъ почѧтъ быти.
+'''Чаталъ-Хѷюкъ''' прьво село въ Анатолїи ѥстъ ѥже девѧтию тысѧщь лѣтъ назадъ почѧтъ быти.
+[[ru:Чатал-Хуюк]]
