*Empty MediaWiki Message*

--- a/Пєтръ_А҃_·_блъгарьскъ.mw
+++ b/Пєтръ_А҃_·_блъгарьскъ.mw
@@ -1,6 +1,6 @@
 '''Петръ А'''( {{Lang-bg|Петър I}}) (927- 971) бѣ цѣсарь [[Блъгарї|блъгареѭ]].
 
-Създа цѣсарьство великоѥ, коѥго стольнъ градъ бѣ блъгарскъ градъ Преславъ.
+Създа [[цѣсарьство]] великоѥ, коѥго стольнъ градъ бѣ блъгарскъ градъ [[Преславъ]].
 [[Category:Блъгарї]]
 [[Category:Людиѥ]]
 [[en:Peter I of Bulgaria]]
