*Empty MediaWiki Message*

--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -8,6 +8,6 @@
 * [[пѧтъкъ]], [[параскевь]], [[параскевьги]]
 * [[сѫбота]], [[собота]]
 * [[недѣл]]
-
+[[Category:Времѧ]]
 [[ru:Неделя]]
 [[en:Week]]
