--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -8,6 +8,6 @@
 * [[пѧтъкъ]], [[параскевь]], [[параскевьги]]
 * [[сѫбота]], [[собота]]
 * [[недѣл]]
-[[Category:Времѧ]]
+[[Category:Врѣемѧ]]
 [[ru:Неделя]]
 [[en:Week]]
