*Empty MediaWiki Message*

--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -8,6 +8,8 @@
 * [[пѧтъкъ]], [[параскевь]], [[параскевьги]]
 * [[сѫбота]], [[собота]]
 * [[недѣл]]
-[[Category:Врѣмѧ]]
+
+[[Катигорї:Седмица]]
+
 [[ru:Неделя]]
 [[en:Week]]
