*Empty MediaWiki Message*

--- a/Пѧтъкъ.mw
+++ b/Пѧтъкъ.mw
@@ -1,4 +1,5 @@
-'''Пѧтъкъ''' ('''параскевь''', '''параскевьги''') пѧтъ дьнь [[Седмица|седмицы]] ѥсть.
+{{}}'''Пѧтъкъ''' ('''параскевь''', '''параскевьги''') пѧтъ дьнь [[Седмица|седмицы]] ѥсть.
+Седмица
 [[Катигорї:Седмица]]
 [[en:Friday]]
 [[ru:Пятница]]
