*Empty MediaWiki Message*

--- a/Пѧтъкъ.mw
+++ b/Пѧтъкъ.mw
@@ -1,5 +1,5 @@
-{{}}'''Пѧтъкъ''' ('''параскевь''', '''параскевьги''') пѧтъ дьнь [[Седмица|седмицы]] ѥсть.
-Седмица
+'''Пѧтъкъ''' ('''параскевь''', '''параскевьги''') пѧтъ дьнь [[Седмица|седмицы]] ѥсть.
+{{Седмица}}
 [[Катигорї:Седмица]]
 [[en:Friday]]
 [[ru:Пятница]]
