--- a/Сѫбота.mw
+++ b/Сѫбота.mw
@@ -1,4 +1,5 @@
 '''Сѫбота''' ('''собота''') шестъ дьнь [[Седмица|седмицы]] ѥсть.
+{{Седмица}}
 [[Катигорї:Седмица]]
 [[en:Saturday]]
 [[ru:Суббота]]
