*Empty MediaWiki Message*

--- a/Нєдѣлꙗ.mw
+++ b/Нєдѣлꙗ.mw
@@ -1,4 +1,5 @@
-'''Недѣл''' седмь дьнь [[Седмица|седмицы]] ѥсть.
+{{}}'''Недѣл''' седмь дьнь [[Седмица|седмицы]] ѥсть.
+Седмица
 [[Катигорї:Седмица]]
 [[en:Sunday]]
 [[ru:Воскресенье]]
