--- a/Нєдѣлꙗ.mw
+++ b/Нєдѣлꙗ.mw
@@ -1,5 +1,5 @@
-{{}}'''Недѣл''' седмь дьнь [[Седмица|седмицы]] ѥсть.
-Седмица
+'''Недѣл''' седмь дьнь [[Седмица|седмицы]] ѥсть.
+{{Седмица}}
 [[Катигорї:Седмица]]
 [[en:Sunday]]
 [[ru:Воскресенье]]
