*Empty MediaWiki Message*

--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Ѹлиновьскъ
 | знамѧ= 
 | знакъ = [[Видъ:Coat_of_Arms_of_Ulianovsk_(2003).png|80 px]]
-| Дрьжава = Словѣньско
+| Дрьжава = Рѡсї
 | Глава = 
 | Людии = 623 тысѫщь
 | Основанъ = 1648
