--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -1,13 +1,13 @@
 '''Седмица''' - ѥдиница изъмѣрени врѣмени ѥсть. Седмь дьньи съдръжитъ ѥсть.
 
 == Дьньи имена ==
-* [[понедѣлъкъ]]
-* [[въторъкъ]]
-* [[срѣда]]
-* [[четврьтъкъ]]
-* [[пѧтъкъ]], [[параскевь]], [[параскевьги]]
-* [[сѫбота]], [[собота]]
-* [[недѣл]]
+# [[понедѣлъкъ]]
+# [[въторъкъ]]
+# [[срѣда]]
+# [[четврьтъкъ]]
+# [[пѧтъкъ]], [[параскевь]], [[параскевьги]]
+# [[сѫбота]], [[собота]]
+# [[недѣл]]
 
 [[Катигорї:Седмица|*]]
 
