*Empty MediaWiki Message*

--- a/Пѧтъкъ.mw
+++ b/Пѧтъкъ.mw
@@ -1,4 +1,4 @@
-'''Пѧтъкъ''' ('''параскевь''', '''параскевьги''') пѧтъ дьнь [[Седмица|седмицы]] ѥсть.
+'''Пѧтъкъ''' ('''параскевь''', '''параскевьги''') пѧтъ дьнь [[Седмица|седмицы]] ѥсть. Именѣ параскевь, параскевьги ѥсте изъ грецькихъ <font style="Garamond">παρασκευή, παρασκευγή</font>.
 {{Седмица}}
 [[Катигорї:Седмица]]
 [[en:Friday]]
