*Empty MediaWiki Message*

--- a/Сѫбота.mw
+++ b/Сѫбота.mw
@@ -1,4 +1,4 @@
-'''Сѫбота''' ('''собота''') шестъ дьнь [[Седмица|седмицы]] ѥсть.
+'''Сѫбота''' ('''собота''') шестъ дьнь [[Седмица|седмицы]] ѥсть. Именѣ сѫбота, собота ѥсте изъ грецькихъ <font style="Garamond">σάμβατον, σάββατον</font>.
 {{Седмица}}
 [[Катигорї:Седмица]]
 [[en:Saturday]]
