*Empty MediaWiki Message*

--- a/Нєдѣлꙗ.mw
+++ b/Нєдѣлꙗ.mw
@@ -1,4 +1,4 @@
-'''Недѣл''' седмь дьнь [[Седмица|седмицы]] ѥсть.
+'''Недѣл''' седмь дьнь [[Седмица|седмицы]] ѥсть. Недѣл ѥстъ дьнь, къгда вьси люди не трѹдѧтъ сѧ, а отъдъшениѥ имѫтъ (ничьтоже не дѣлаѭтъ).
 {{Седмица}}
 [[Катигорї:Седмица]]
 
