--- a/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
+++ b/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
@@ -1,3 +1,3 @@
-'''Прьваıа дѵнастиıа Егѷпьта.'''
+'''Прьва дѵнасти Егѷпьта.'''
 
-Прьваıа дѵнастиıа [[Егѷпьтъ|Егѷпьта]] бѣ [[Фараѡнъ|фараѡни]] ции владычьствоваахѫ отъ лѣта ҂гл҃е прѣдъ р҃х до лѣта ҂вѿч прѣдъ р҃х. Сии фараѡни сѫтъ [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжеръ|Дъжеръ]] и [[Денъ|Денъ]] и прочии. Брьньныи гроби ихъ бышѧ обрѣщени въ древл҄ьн҄ихъ градѣхъ [[Абѷдосъ|Абѷдосѣ]] и [[Саккара|Саккарѣ]] отъ [[Франкї|франкїиськаѥго]] [[Археологиıа|археолога]] [[Флиндерсъ Петри|Флиндерса Петри]] въ ι҃ѳ сътолѣтии отъ р҃х.
+Прьва дѵнасти [[Егѷпьтъ|Егѷпьта]] бѣ [[Фараѡнъ|фараѡни]] ции владычьствоваахѫ отъ лѣта ҂гл҃е прѣдъ р҃х до лѣта ҂вѿч прѣдъ р҃х. Сии фараѡни сѫтъ [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжеръ|Дъжеръ]] и [[Денъ|Денъ]] и прочии. Брьньныи гроби ихъ бышѧ обрѣщени въ древл҄ьн҄ихъ градѣхъ [[Абѷдосъ|Абѷдосѣ]] и [[Саккара|Саккарѣ]] отъ [[Франкї|франкїиськаѥго]] [[Археологи|археолога]] [[Флиндерсъ Петри|Флиндерса Петри]] въ ι҃ѳ сътолѣтии отъ р҃х.
