--- a/Томьскъ.mw
+++ b/Томьскъ.mw
@@ -15,3 +15,38 @@
 [[Category:Гради]]
 [[Катигорї:Рѡсї]]
 [[ru:Томск]]
+
+[[be:Горад Томск]]
+[[be-x-old:Томск]]
+[[bg:Томск]]
+[[cs:Tomsk]]
+[[da:Tomsk]]
+[[de:Tomsk]]
+[[el:Τομσκ]]
+[[en:Tomsk]]
+[[eo:Tomsk]]
+[[es:Tomsk]]
+[[et:Tomsk]]
+[[fa:تومسک]]
+[[fi:Tomsk]]
+[[fr:Tomsk]]
+[[id:Tomsk]]
+[[io:Tomsk]]
+[[it:Tomsk]]
+[[ja:トムスク]]
+[[ko:톰스크]]
+[[la:Tomscum]]
+[[nl:Tomsk]]
+[[nn:Tomsk]]
+[[no:Tomsk]]
+[[os:Томск]]
+[[pl:Tomsk]]
+[[ro:Tomsk]]
+[[ru:Томск]]
+[[ru-sib:Томск]]
+[[sl:Tomsk]]
+[[sr:Томск]]
+[[sv:Tomsk]]
+[[tr:Tomsk]]
+[[uk:Томськ]]
+[[zh:托木斯克]]
