Катигорї Словѣньсци ѩзыци

--- a/Блъгарьскъ_ѩꙁꙑкъ.mw
+++ b/Блъгарьскъ_ѩꙁꙑкъ.mw
@@ -8,6 +8,7 @@
 == Зьри такожде ==
 {{InterWiki|bg|Начална страница||блъгарьскыимь}}
 [[Катигорї:Блъгарї]]
+[[Катигорї:Словѣньсци ѩзыци]]
 
 [[af:Bulgaars]]
 [[ar:لغة بلغارية]]
