*Empty MediaWiki Message*

--- a/Томьскъ.mw
+++ b/Томьскъ.mw
@@ -1,4 +1,4 @@
-{{Градъ|name =  Томскъ
+{{Градъ|name =  Томьскъ
 | знамѧ= [[Видъ:Tomsk city flag.png|100 px]]
 | знакъ = [[Видъ:Tomsk_city_coat_of_arms.png |80 px]]
 | Дрьжава = Рѡсї
@@ -8,9 +8,9 @@
 | map = [[Видъ:RussiaTomsk-Location2007-01.png|200 px]]
 }}
 
-[[Видъ:TSU-2004-19924.jpg|thumb|200px|left|Томскъ]]
+[[Видъ:TSU-2004-19924.jpg|thumb|200px|left|Томьскъ]]
 
-'''Томскъ''' ({{Lang-ru|Томск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Главьнъ градъ [[Томска область|Томскы]] области ѥстъ.
+'''Томьскъ''' ({{Lang-ru|Томск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Главьнъ градъ [[Томьска область|Томьскы]] области ѥстъ.
 
 [[Category:Гради]]
 [[Катигорї:Рѡсї]]
