*Empty MediaWiki Message*

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -4,7 +4,7 @@
 | map = [[image:LocationUkraine.svg|300px]] 
 | Стол҄ьнъ градъ = [[Кыѥвъ]]
 | Ѩзыкъ = [[Ѩзыкъ ѹкраиньскъ|ѹкраиньскъ]]
-| Глава = [[Вікторъ Ющѣнко]]
+| Глава = [[Вікторъ Ющенко]]
 |area =
 | Людии = 46,4 леѡдръ
 | Почѧта = 1991
