--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -23,6 +23,7 @@
 * [[Растовска область]]
 * [[Самарьска область]]
 * [[Свердловьска область]]
+* [[Томьска область]]
 * [[Ѹлиновьска область]]
 * [[Челѣбиньска область]]
 '''Кра'''
@@ -31,6 +32,7 @@
 | valign="top" |'''Димократїѩ'''
 * [[Башкортостанъ]]
 * [[Татарстанъ]]
+
 
 |}
 
