*Empty MediaWiki Message*

--- a/Англїискъ_ѩꙁꙑкъ.mw
+++ b/Англїискъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Anglospeak.png|thumb]]
-'''Англїискъ''' (такоже ''ѧглѧньскъ''. англїискы ''english language'') [[Велика Британї|Великы Британїѩ]], [[АѤД|АѤДа]], [[Аѵстралї|Аѵстралїѩ]], [[Канада|Канады]] и мъногъ странъ тако же дрьжавьнъ ѩзыкъ ѥстъ. Ѥдинъ и шести епїсимьнъ и дѣльнъ ѩзыкъ [[Ѥдьнѥнъ народъ съвѣтъ|ѤНС]] ѥстъ. 
+'''Англїискъ''' (такоже ''ѧглѧньскъ''. англїискы ''english language'') [[Велика Британї|Великы Британїѩ]], [[АѤД|АѤДъ]], [[Аѵстралї|Аѵстралїѩ]], [[Канада|Канады]] и мъногъ странъ тако же дрьжавьнъ ѩзыкъ ѥстъ. Ѥдинъ и шести епїсимьнъ и дѣльнъ ѩзыкъ [[Ѥдьнѥни народи съвѣта|ѤНС]] ѥстъ. 
 
 == Зьри такожде ==
 {{InterWiki|en|Main Page||Англїискыимь}}
