--- a/Сѣвєръ.mw
+++ b/Сѣвєръ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Kompass de N.png|right|200px]]
 '''Сѣверъ''' - ѥдьна изъ четырьхъ странъ свѣтѹ ѥстъ. Странѹ тѫ ѥлѣ вьсегда изображаѭтъ съврьхѹ.
-[[Катигорї:Страны свѣтѹ]]
+{{Страны свѣтѹ}}
 [[en:North]]
 [[ru:Север]]
