--- a/Югъ.mw
+++ b/Югъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Kompass de S.png|right|200px]]
 '''Югъ''' - ѥдьна изъ четырьхъ странъ свѣтѹ ѥстъ. Странѹ тѫ ѥлѣ вьсегда изображаѭтъ сънизѹ.
-[[Катигорї:Страны свѣтѹ]]
+{{Страны свѣтѹ}}
 [[en:South]]
 [[ru:Юг]]
