*Empty MediaWiki Message*

--- a/Нєва.mw
+++ b/Нєва.mw
@@ -1,4 +1,4 @@
-Нева рѣка въ [[Рѡсї|Рѡсїи]] ѥсть. На Невѣ [[Санкт-Петербѹргъ]] построѥнъ ѥстъ.
+'''Нева''' рѣка въ [[Рѡсї|Рѡсїи]] ѥсть. На Невѣ [[Санкт-Петербѹргъ]] построѥнъ ѥстъ.
 
 [[Category:Рѣкы]]
 
