*Empty MediaWiki Message*

--- a/Оужицє.mw
+++ b/Оужицє.mw
@@ -1,17 +1,17 @@
 {{Градъ|name = Ѹжице
-| знамѧ= 
+| знамѧ = 
 | знакъ = [[Видъ:Uzice.jpg|80 px]]
 | Дрьжава = Срьбїıа
-| Глава = 
-| Людии = 
-| Основанъ = 
-| map = 
+| Глава = Тихомир Петковић
+| Людии = 54,717
+| Основанъ = ?
+| map = [[Видъ:Serbia Užice.png|200 px]]
 |}}
 
-'''Ѹжице''' ([[ѩзыкъ срьбьскъ|срьбьскы]]: ''Ужице'') [[градъ]] ѥстъ [[Срьбїıа|Срьбїѩ]], на рѣцѣ имѧнемъ [[Дѣтин]].
+'''Ѹжице''' ([[ѩзыкъ срьбьскъ|срьбьскы]]: ''Ужице'') [[градъ]] ѥстъ [[Срьбїıа|Срьбїѩ]]. На рѣцѣ имѧнемъ [[Дѣтин]] построѥнъ ѥстъ, помѣновенъ запрьва лѣта 1329 ѥстъ.
 
 [[Image:Uzice-by-pedja-supurovic-07.jpg|thumb|left|180px|Црькы]]
-[[Image:Uzice-by-pedja-supurovic-02.JPG|thumb|right|180px|Старъ градъ]]
+[[Image:Uzice-by-pedja-supurovic-02.JPG|thumb|left|180px|Старъ градъ]]
 [[Category:Гради]]
 [[Category:Срьбї]]
 
