--- a/Оужицє.mw
+++ b/Оужицє.mw
@@ -8,7 +8,7 @@
 | map = [[Видъ:Serbia Užice.png|200 px]]
 |}}
 
-'''Ѹжице''' ([[ѩзыкъ срьбьскъ|срьбьскы]]: ''Ужице'') [[градъ]] ѥстъ [[Срьбїıа|Срьбїѩ]]. На рѣцѣ имѧнемъ [[Дѣтин]] построѥнъ ѥстъ, помѣновенъ запрьва лѣта 1329 ѥстъ.
+'''Ѹжице''' ([[ѩзыкъ срьбьскъ|срьбьскы]]: ''Ужице'') [[градъ]] ѥстъ [[Срьбїıа|Срьбїѩ]]. На рѣцѣ имѧнемъ [[Дѣтин]] построѥнъ ѥстъ, помѣновенъ запрьва лѣта 1329 ѥстъ. Главьнъ градъ Златиборьскы области ѥстъ.
 
 [[Image:Uzice-by-pedja-supurovic-07.jpg|thumb|left|180px|Црькы]]
 [[Image:Uzice-by-pedja-supurovic-02.JPG|thumb|left|180px|Старъ градъ]]
