--- a/Вꙑборгъ.mw
+++ b/Вꙑборгъ.mw
@@ -18,7 +18,7 @@ Image:Viipuri_vaakuna.gif|Выборга знакъ лѣтъ 1920—1939
 
 [[br:Viborg]]
 [[cs:Vyborg]]
-[[da:Viborg (Rusland)]]
+[[da:Vyborg]]
 [[de:Wyborg]]
 [[en:Vyborg]]
 [[eo:Viborg]]
