--- a/Оулиꙗновьскъ.mw
+++ b/Оулиꙗновьскъ.mw
@@ -1,5 +1,5 @@
 {{Градъ|name = Ѹлиновьскъ
-| знамѧ= [[Видъ:Flag_of_Ulyanovsk.jpg|120 px]]
+| знамѧ= [[Видъ:Flag_of_Ulyanovsk.svg|120 px]]
 | знакъ = [[Видъ:Coat_of_Arms_of_Ulianovsk_(2003).png|80 px]]
 | Дрьжава = Рѡсї
 | Глава = 
