*Empty MediaWiki Message*

--- a/Отьчє_нашь.mw
+++ b/Отьчє_нашь.mw
@@ -1,4 +1,4 @@
-'''Отьче нашь''' главьна молитва [[Хрїстїаньство|хрїстїанъ]] ѥстъ, иже вѣрѹѭтъ ко самъ ѥѩ [[Їисѹсъ]] чловѣкомъ изглагола. На многы ѩзыкы с҄и молитва прѣведена ѥстъ.
+[[Видъ:Oldchurchslavonic.jpg|thumb|right|400px|«Отьче нашь» [[Црькъвьнословѣньскъ ѩзыкъ|црькъвьнословѣньскы]]]]'''Отьче нашь''' главьна молитва [[Хрїстїаньство|хрїстїанъ]] ѥстъ, иже вѣрѹѭтъ ко самъ ѥѩ [[Їисѹсъ]] чловѣкомъ изглагола. На многы ѩзыкы с҄и молитва прѣведена ѥстъ.
 
 [[Словѣньскъ_ѩзыкъ|Словѣньсцѣмь]] же ѩзыцѣмь тако сѧ глаголѥтъ:
 :Отьче нашь, иже ѥси на небесѣхъ! Да свѧтитъ сѧ имѧ Твоѥ;
@@ -8,7 +8,7 @@
 :и не въведи насъ въ искѹшениѥ, нъ избави ны отъ лѫкаваѥго.
 :ко твоѥ естъ цѣсарьствиѥ и сила и слава въ вѣкы .
 :Аминь.
-[[Видъ:Oldchurchslavonic.jpg|thumb|right|400px|«Отьче нашь» [[Црькъвьнословѣньскъ ѩзыкъ|црькъвьнословѣньскы]]]]
+
 
 
 [[Катигорї:All orphaned pages]]
