--- a/Главьна_страница.mw
+++ b/Главьна_страница.mw
@@ -2,9 +2,9 @@
 {| cellspacing="0" cellpadding="0" style="border-spacing:8px;background:none;"
 | width="100%" valign="top" bgcolor="#FAF9EC" style="border:1px solid #DBD2B0"|
 {| cellspacing="0" cellpadding="5" style="border-top:1px solid #DBD2B0;background:none;"
-|width="100%" style="font: 100% Vikidemia, Unicode5; color:black" align="center" bgcolor="#ECE5CA" |<font size="5">ДОБРѢ ПРИТИ ВЪ ВИКИПЕДЇѬ
+|width="100%" style="font: 100% ArialPorViki, Vikidemia, Unicode5; color:black" align="center" bgcolor="#ECE5CA" |<font size="5">ДОБРѢ ПРИТИ ВЪ ВИКИПЕДЇѬ
 |-
-| style="border-top:1px solid #DBD2B0; font: 95% Vikidemia, Unicode5;" align="left" bgcolor="#FAF9EC"|
+| style="border-top:1px solid #DBD2B0; font: 95% ArialPorViki, Vikidemia, Unicode5;" align="left" bgcolor="#FAF9EC"|
 {|style="background:none;"
 </p>
 <table cellspacing=1 cellpadding=1 border=1 bordercolor="#DBD2B0"><tr><td><center>
