Напиьсаниѥ о бѹкъвии исправихъ.

--- a/Главьна_страница.mw
+++ b/Главьна_страница.mw
@@ -1,4 +1,4 @@
-О сѥго дьне наша Википедї новомь бѹкъвиѥмь именьмь Викидемі пьсана бѫдетъ. Поими ѥ [http://www.wmensch.nm.ru/Vikidemia.7z с&#x0484;ьде].
+О сѥго дьне наша Википедї новомь бѹкъвиѥмь именьмь ArialPorViki пьсана бѫдетъ. Поими ѥ [http://www.wmensch.nm.ru/Vikidemia.7z с&#x0484;ьде].
 {| cellspacing="0" cellpadding="0" style="border-spacing:8px;background:none;"
 | width="100%" valign="top" bgcolor="#FAF9EC" style="border:1px solid #DBD2B0"|
 {| cellspacing="0" cellpadding="5" style="border-top:1px solid #DBD2B0;background:none;"
