--- a/Понєдѣл҄ьникъ.mw
+++ b/Понєдѣл҄ьникъ.mw
@@ -1,4 +1,4 @@
-'''Понедѣлъкъ''' прьвъ дьнь [[Седмица|седмицы]] ѥсть.
+'''Понедѣл҄ьникъ''' прьвыи дьнь [[Седмица|седмицѧ]] ѥсть.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
