--- a/Въторьникъ.mw
+++ b/Въторьникъ.mw
@@ -1,4 +1,4 @@
-'''Въторъкъ''' въторъ дьнь [[Седмица|седмицы]] ѥсть.
+'''Въторьникъ''' въторыи дьнь [[Седмица|седмицѧ]] ѥсть.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
