--- a/Срѣда.mw
+++ b/Срѣда.mw
@@ -1,4 +1,4 @@
-'''Срѣда''' третии дьнь [[Седмица|седмицы]] ѥсть.
+'''Срѣда''' третии дьнь [[Седмица|седмицѧ]] ѥсть.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
