Еще ѥдьнѫ блазнѫ исправихъ.

--- a/Срѣда.mw
+++ b/Срѣда.mw
@@ -1,4 +1,4 @@
-'''Срѣда''' третии дьнь [[Седмица|седмицѧ]] ѥсть.
+'''Срѣда''' третии дьнь [[Седмица|седмицѧ]] ѥстъ.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
