--- a/Чєтврьтъкъ.mw
+++ b/Чєтврьтъкъ.mw
@@ -1,4 +1,4 @@
-'''Четврьтъкъ''' четврьтъ дьнь [[Седмица|седмицы]] ѥсть.
+'''Четврьтъкъ''' четврьтъ дьнь [[Седмица|седмицѧ]] ѥстъ.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
