Еще ѥдьнѫ блазнѫ исправихъ.

--- a/Понєдѣл҄ьникъ.mw
+++ b/Понєдѣл҄ьникъ.mw
@@ -1,4 +1,4 @@
-'''Понедѣл҄ьникъ''' прьвыи дьнь [[Седмица|седмицѧ]] ѥсть.
+'''Понедѣл҄ьникъ''' прьвыи дьнь [[Седмица|седмицѧ]] ѥстъ.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
