--- a/Въторьникъ.mw
+++ b/Въторьникъ.mw
@@ -1,4 +1,4 @@
-'''Въторьникъ''' въторыи дьнь [[Седмица|седмицѧ]] ѥсть.
+'''Въторьникъ''' въторыи дьнь [[Седмица|седмицѧ]] ѥстъ.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
