--- a/Пѧтъкъ.mw
+++ b/Пѧтъкъ.mw
@@ -1,4 +1,4 @@
-'''Пѧтъкъ''' ('''параскевь''', '''параскевьги''') пѧтъ дьнь [[Седмица|седмицы]] ѥсть. Именѣ параскевь, параскевьги ѥсте изъ грецькихъ <font style="Garamond">παρασκευή, παρασκευγή</font>.
+'''Пѧтъкъ''' ([[Грьчьскъ ѩзыкъ|грьчьскы]] '''параскеѵа́''', такоже рекомоѥ) [[Седмица|седмицѧ]] пѧтыи дьнь ѥстъ.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
