Блазны исправихъ и съкратихъ.

--- a/Сѫбота.mw
+++ b/Сѫбота.mw
@@ -1,4 +1,4 @@
-'''Сѫбота''' ('''собота''') шестъ дьнь [[Седмица|седмицы]] ѥсть. Именѣ сѫбота, собота ѥсте изъ грецькихъ <font style="Garamond">σάμβατον, σάββατον</font>.
+'''Сѫбота''' (из [[Грьчьскъ ѩзыкъ|грьчьска]] ѩзыка σάμβατον < σάββατον) [[Седмица|седмицѧ]] шестыи дьнь ѥстъ.
 {{Седмица}}
 [[Катигорї:Седмица]]
 [[en:Saturday]]
