Блазны исправихъ и съкратихъ пѹста.

--- a/Нєдѣлꙗ.mw
+++ b/Нєдѣлꙗ.mw
@@ -1,4 +1,4 @@
-'''Недѣл''' седмь дьнь [[Седмица|седмицы]] ѥсть. Недѣл ѥстъ дьнь, къгда вьси люди не трѹдѧтъ сѧ, а отъдъшениѥ имѫтъ (ничьтоже не дѣлаѭтъ).
+'''Недѣл''' [[Седмица|седмицѧ]] седмыи дьнь ѥстъ.
 {{Седмица}}
 [[Катигорї:Седмица]]
 
