--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -1,8 +1,8 @@
 '''Седмица''' - ѥдиница изъмѣрени врѣмени ѥсть. Седмь дьньи съдръжитъ ѥсть.
 
 == Дьньи имена ==
-# [[понедѣлъкъ]]
-# [[въторъкъ]]
+# [[понедѣл҄ьникъ]]
+# [[въторьникъ]]
 # [[срѣда]]
 # [[четврьтъкъ]]
 # [[пѧтъкъ]], [[параскевь]], [[параскевьги]]
