--- a/Югъ.mw
+++ b/Югъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Kompass de S.png|right|200px]]
-'''Югъ''' - ѥдьна изъ четырьхъ странъ свѣтѹ ѥстъ. Странѹ тѫ ѥлѣ вьсегда изображаѭтъ сънизѹ.
-{{Страны свѣтѹ}}
+'''Югъ''' ѥдьна изъ четырьхъ свѣта странъ ѥстъ.
+{{Свѣта страны}}
 [[en:South]]
 [[ru:Юг]]
