--- a/Сѣвєръ.mw
+++ b/Сѣвєръ.mw
@@ -1,6 +1,6 @@
 [[Видъ:Kompass de N.png|right|200px]]
 '''Сѣверъ''' - ѥдьна изъ четырьхъ странъ свѣтѹ ѥстъ. Странѹ тѫ ѥлѣ вьсегда изображаѭтъ съврьхѹ.
-{{Страны свѣтѹ}}
+{{Свѣта страны}}
 
 [[als:Norden (Himmelsrichtung)]]
 [[ar:شمال]]
