*Empty MediaWiki Message*

--- a/Въстокъ.mw
+++ b/Въстокъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Kompass de O.png|right|200px]]
 '''Въстокъ''' - ѥдьна изъ четырьхъ странъ свѣтѹ ѥстъ. За рана ѹтромь [[Слъньце]] на въстокѹ вьсегда ѥстъ.
-{{Страны свѣтѹ}}
+{{Свѣта страны}}
 [[en:East]]
 [[ru:Восток]]
