*Empty MediaWiki Message*

--- a/Ꙁападъ.mw
+++ b/Ꙁападъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:Kompass de W.png|right|200px]]
 '''Западъ''' - ѥдьна изъ четырьхъ странъ свѣтѹ ѥстъ. Поздѣ вечеръмь [[Слъньце]] на западѹ вьсегда ѥстъ.
-{{Страны свѣтѹ}}
+{{Свѣта страны}}
 [[en:West]]
 [[ru:Запад]]
