--- a/Львъ.mw
+++ b/Львъ.mw
@@ -1,7 +1,12 @@
 [[Image:Lion lying 2.jpg|thumb|Львъ]]
 '''Львъ''' ({{lang-la|Panthera leo}}) ѥстъ звѣрь котьскыѩ сѣмиѩ.
 
+{{Link FA|de}}
 {{Link FA|fr}}
+{{Link FA|it}}
+{{Link FA|he}}
+{{Link FA|pl}}
+{{Link FA|fi}}
 
 [[Category:All orphaned pages]]
 [[Category:Звѣриѥ]]
