Нѣкыѩ блазны исправихъ. Нъ

--- a/Папєжь_Алєѯандръ_Ѕ҃.mw
+++ b/Папєжь_Алєѯандръ_Ѕ҃.mw
@@ -1,6 +1,6 @@
 [[Видъ:Alexander VI - Pinturicchio detail.jpg|thumb|200 px|Папежь Алеѯандръ Ѕ]]
-'''Алеѯандръ Ѕ''' бѣ [[папежь]] (лѣта 1492 аѵгѹста 11 числа - лѣта 1503 аѵгѹста 18 числа).
-Алеѯандръ Ѕ ([[Родриго Ленцуоли]], Алеѯандръ Ѕ [[Борджї]]) родисѧ въ [[Валенсї|Валенсїи]] въ лѣто 1431 и бѣ нетии папежа [[Папежь Калиѯъ Г|Калиѯа Г]]. Зъванъ ддеѭ своимъ приде въ [[Римъ]] въ лѣто 1455 идеже приѩлъ санъ [[кардиналъ|кардинальскъ]]. И живѧше въ блѫдѣ съ патрик҄ѥѭ [[Роза Ваноцца|Розоѭ Ваноццоѭ]] же роди ѥмѹ четыре сыны ([[Чезаре Борджї|Чезаре]] и [[Гифри Борджї|Гифри]] да ина дъва) да дъчь [[Лѹкрецї Борджї|Лѹкрецїѭ]]. Въ лѣто 1492 аѵгѹста 11 числа съ застѫпомь кардиналъ [[Кардиналъ Сфорца|Сфорца]] и [[Кардиналъ Чибо|Чибо]] приѩлъ санъ папежѣ и наречесѧ Алеѯандръ Ѕ Борджї. И живѧше Алеѯандръ въ блѫдѣ мрьзъкомь съ дъчиѭ своѥ Лѹкрецѥѭ. Дъва коньчьну лѣта своѥго ѹмножилъ Алеѯандръ кѹпъ [[Индульгенцї|индульгенцїѩми]] и саны и капами кардинальсками бо истъщисѧ скотьница [[Ватиканъ|Ватиканьска]] ѿ рати [[Италї|Итальскь]] бещисльнь и ѿ блѫда ѥго велика.
+'''Алеѯандръ Ѕ''' [[папежь]] бѣ (лѣта 1492 аѵгѹста 11 числа — лѣта 1503 аѵгѹста 18 числа).
+Алеѯандръ Ѕ ([[Родриго Ленцѹоли]], Алеѯандръ Ѕ [[Борджи]]) рожденъ [[Валенсї|Валенсїи]] ѥстъ лѣта 1431 и папежа нетии [[Папежь Калиѯъ Г|Калиѯа Г]] бѣ. Зъванъ стрыѥмь своимъ приде въ [[Римъ]] лѣта 1455 идеже приѩлъ [[кардиналъ|кардинальскъ]] санъ ѥстъ. И жилъ въ блѫдѣ съ патрик҄ѥѭ [[Роза Ваноца|Розоѭ Ваноцеѭ]] бѣ же роди ѥмѹ четыри сыны ([[Чезаре Борджи|Чезара]] и [[Гифри Борджи|Гифри]] да ина дъва) да дъщь [[Лѹкреци Борджи|Лѹкрециѭ]]. Лѣта 1492 аѵгѹста 11 числа съ застѫпомь кардинала [[Кардиналъ Сфорца|Сфорца]] и [[Кардиналъ Чибо|Чибо]] приѩлъ санъ папежа и сѧ Алеѯандръ Ѕ Борджи санъ. И жилъ Алеѯандръ въ блѫдѣ мрьзъкомь съ дъчериѭ своѥѭ Лѹкрециѥѭ бѣ. Дъва коньчьна лѣта сво ѹмножилъ Алеѯандръ кѹпъ [[Индѹлгенци|индѹлгенцими]] и саны и капами кардинальсками бо истъщи сѧ [[Ватиканъ|Ватиканьска]] скотьница о бещисльнь рать [[Италї|Италиискъ]] и отъ ѥго велика блѫда.
 Отравесѧ лѣта 1503 аѵгѹста 18 числа.
 [[Category:Людиѥ|А]]
 
