--- a/Оулиꙗновьска_область.mw
+++ b/Оулиꙗновьска_область.mw
@@ -1,5 +1,5 @@
 [[Видъ:Flag of Ulyanovsk Oblast.png|right|thumb|150px|Ѹлиновьскыѩ области знамѧ]]
-'''Ѹлиновьска область''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ульяновская область'') [[Рѡсї|Рѡсїи]] ѥстъ, ѥѩже главьнъ градъ [[Ѹлиновьскъ]] ѥстъ. Почѧта ѥстъ лѣта 1943, бол҄ии градъ (по Ѹлиновьска) [[Дъмитровъградъ]] ѥстъ.
+'''Ѹлиновьска область''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ульяновская область'') [[Рѡсї|Рѡсїи]] ѥстъ, ѥѩже главьнъ градъ [[Ѹлиновьскъ]] ѥстъ. Почѧта ѥстъ лѣта 1943, бол҄ии градъ (по Ѹлиновьска) [[Дмїтровъградъ]] ѥстъ.
 
 [[Катигорї:Рѡсї]]
 [[bg:Уляновска област]]
