--- a/Їллѷрїиска_Словѣнїꙗ.mw
+++ b/Їллѷрїиска_Словѣнїꙗ.mw
@@ -12,7 +12,7 @@
 '''Їллѷрїиска Словѣнї''' ([[їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскы]] ''Slovénija'' или Republika Slovénija, [[словѣньскъ ѩзыкъ|словѣньскы]] назъвана «Їллѷрїиска» да бѣжали бѫ о съмѣшени съ Карпатьскоѭ словѣньскоѭ дрьжавоѭ и ѥю ѩзыкѹ именьма) срѣдьнѩ Еѵрѡпы южьна словѣньска дрьжава ѥстъ. Ѥѩ стольнъ градь [[Люблна]] ѥстъ.
 Їллѷрїискы Словѣнїѩ дрьжавьнъ ѩзыкъ ѥстъ [[їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскъ]]. Їллѷрїискы Словѣнїи людии 2 леѡдръ обитаѥтъ.
 
-== Історї ==
+== Їсторї ==
 
 1918 годѣ по [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше въ съставъ Кралѥвьства Срьбъ, Хръватъ и Словѣньць (послѣди именѹѥма [[Югослави]], по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] же Социалистичьска  Съвѫзьна Димократї Югослави (ССДЮ) бѣаше). Послѣди распада ССДЮ Їллѷрїиска Словѣнї стала ѥстъ пакы самостотел҄ьна дрьжава. 
 
