*Empty MediaWiki Message*

--- a/Кашоубьскъ_ѩꙁꙑкъ.mw
+++ b/Кашоубьскъ_ѩꙁꙑкъ.mw
@@ -7,7 +7,7 @@ Aa Ąą Ãã Bb Cc Dd Ee Éé Ëë Ff Gg Hh Ii Jj Kk Ll Łł<br>Mm Nn Ńń Oo Ò
 == Зьри такожде ==
 {{InterWiki|csb|Przédnô starna||кашѹбьскыимь}}
 [[Category:Пол̑ьска]]
-[[Катигорї:Ѩзыци]]
+[[Катигорї:Словѣньсци ѩзыци]]
 
 [[af:Kasjoebies]]
 [[am:ካሹብኛ]]
