--- a/Словѣньсци_ѩꙁꙑци.mw
+++ b/Словѣньсци_ѩꙁꙑци.mw
@@ -28,6 +28,7 @@
 * [[Хръватьскъ_ѩзыкъ|хръватьскъ]]
 * [[Босньскъ_ѩзыкъ|босньскъ]]
 * [[Їллїрїиско-словѣньскъ_ѩзыкъ|їллїрїиско-словеньскъ]].
+* [[Црькъвьнословѣньскъ ѩзыкъ|црькъвьнословѣньскъ]]
 
 [[Category:Словѣньсци ѩзыци|*]]
 [[ru:Славянские языки]]
