--- a/Словѣньсци_ѩꙁꙑци.mw
+++ b/Словѣньсци_ѩꙁꙑци.mw
@@ -9,6 +9,10 @@
 * [[Ѹкраиньскъ_ѩзыкъ|ѹкраиньскъ]]
 * [[Карпатьско-рѹськъ ѩзыкъ|карпатьско-рѹсьскъ]].
 
+Си же сѫтъ мрьтви '' въсточьни'' словѣньсци ѩзыци: 
+* [[Древл҄ьнъ рѹсьскъ ѩзыкъ|древл҄ьнъ рѹсьскъ]] - от ѥго рѹсьскъ, ѹкраиньскъ и бѣлорѹсьскъ ѩзъци сѫтъ
+* [[Говоръ древл҄ьнѥновоградьскъ|древл҄ьнѥновоградьскъ]]
+
 == Западьни ==
 
 А с҄и же сѫтъ живи ''западьни'' словѣньсци ѩзыци:
