--- a/Словѣньсци_ѩꙁꙑци.mw
+++ b/Словѣньсци_ѩꙁꙑци.mw
@@ -32,8 +32,10 @@
 * [[Хръватьскъ_ѩзыкъ|хръватьскъ]]
 * [[Босньскъ_ѩзыкъ|босньскъ]]
 * [[Їллїрїиско-словѣньскъ_ѩзыкъ|їллїрїиско-словеньскъ]].
-* [[Црькъвьнословѣньскъ ѩзыкъ|црькъвьнословѣньскъ]]
 
+А с҄и же сѫтъ мрьтви южьни словѣньсци ѩзыци:
+* [[словѣньскъ ѩзыкъ|словѣньскъ]] - от ѥго црькъвьнословѣньскъ ѩзъкъ ѥстъ 
+* [[Црькъвьнословѣньскъ ѩзыкъ|црькъвьнословѣньскъ]]
 [[Category:Словѣньсци ѩзыци|*]]
 [[ru:Славянские языки]]
 [[af:Slawiese tale]]
