--- a/Словѣньсци_ѩꙁꙑци.mw
+++ b/Словѣньсци_ѩꙁꙑци.mw
@@ -12,6 +12,7 @@
 Си же сѫтъ мрьтви '' въсточьни'' словѣньсци ѩзыци: 
 * [[Древл҄ьнъ рѹсьскъ ѩзыкъ|древл҄ьнъ рѹсьскъ]] - от ѥго рѹсьскъ, ѹкраиньскъ и бѣлорѹсьскъ ѩзъци сѫтъ
 * [[Говоръ древл҄ьнѥновоградьскъ|древл҄ьнѥновоградьскъ]]
+* [[Западьно-рѹсьскъ ѩзыкъ|западьно-рѹсьскъ (древл҄ьнъ бѣлорѹсьскъ)]]  - от ѥго бѣлорѹсьскъ ѩзъкъ ѥстъ
 
 == Западьни ==
 
