--- a/Вавѷлѡнъ.mw
+++ b/Вавѷлѡнъ.mw
@@ -1,4 +1,4 @@
-'''Вавѵлѡнъ''' древлѥ бѣаше великъ градъ [[Асиıа|Асиѩ]], [[Месопотамиıа|Месопотамии]], на рѣцѣ имѧнемъ [[Еѷфратъ]].
+'''Вавѷлѡ́нъ''' древлѥ [[Месопотамї|Месопотамїѩ]] великъ градъ бѣ, [[Еѵфрата|Еѵфратѣ]] рѣцѣ.
 
 [[Category:Гради]]
 
