--- a/Чрьна_Гора.mw
+++ b/Чрьна_Гора.mw
@@ -11,7 +11,7 @@
 }}
 '''Чрьна Гора''' или '''Чрьногориѥ''' ([[срьбьскъ ѩзыкъ|срьбьскы]] ''Црна Гора''; невѣрьнѣ зываѥма иногда словѣньскы «Чрьногори» по образѹ дрѹгъ дрьжавъ именъ) дрьжава [[Балкани|Балканъ]] ѥстъ. Чрьныѩ Горы стольнъ градъ [[Подъгорица]] ѥстъ. Чрьны Горы людии 684 тысѧщи обитаѥтъ.
 
-== Історї ==
+== Їсторї ==
 
 Давѣ была самостотел҄ьна бѣаше, 1918 годѣ по [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше въ съставъ Кралѥвьства Срьбъ, Хръватъ и Словѣньць (послѣди именѹѥма [[Югослави]], по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] же Социалистичьска  Съвѫзьна Димократї Югослави (ССДЮ) бѣаше). Послѣди распада ССДЮ въшьла бѣаше въ съвѫзьнѫ дрьжавѫ Срьбиѭ и Чрьногориѥ, 2006 годѣ по въсенародьна гласовани Чрьна Гора стала ѥстъ пакы самостотел҄ьна дрьжава. 
 [[Category:Чрьна Гора| ]]
