*Empty MediaWiki Message*

--- a/Асенѥвоградъ.mw
+++ b/Асенѥвоградъ.mw
@@ -2,3 +2,18 @@
 
 [[Category:Гради]]
 [[Category:Блъгарї]]
+
+[[bg:Асеновград]]
+[[de:Asenowgrad]]
+[[el:Στενήμαχος (Βουλγαρία)]]
+[[en:Asenovgrad]]
+[[fr:Asenovgrad]]
+[[gl:Asenovgrad - Асеновград]]
+[[mk:Асеновград]]
+[[nl:Asenovgrad]]
+[[pl:Asenowgrad]]
+[[pt:Asenovgrad]]
+[[ru:Асеновград]]
+[[sr:Асеновград]]
+[[sv:Asenovgrad]]
+[[tr:Asenovgrad]]
