*Empty MediaWiki Message*

--- a/Хасково.mw
+++ b/Хасково.mw
@@ -1,3 +1,17 @@
 Хасково ѥстъ градъ [[Блъгарї]]  ѩ.Людии обитаѥтъ 60 тысѫщь.
 [[Category:Гради]]
 [[Катигорї:Блъгарї]]
+
+[[bg:Хасково]]
+[[cs:Chaskovo]]
+[[de:Chaskowo]]
+[[en:Haskovo]]
+[[fi:Haskovo]]
+[[it:Haskovo]]
+[[ja:ハスコボ]]
+[[mk:Хасково]]
+[[nl:Chaskovo (stad)]]
+[[pl:Chaskowo]]
+[[pt:Khaskovo]]
+[[tr:Hasköy]]
+[[uk:Хасково]]
