--- a/Хасково.mw
+++ b/Хасково.mw
@@ -1,4 +1,4 @@
-Хасково ѥстъ градъ [[Блъгарї]]  ѩ.Людии обитаѥтъ 60 тысѫщь.
+'''Хасково''' [[Блъгарї|Блъгарїѩ]] градъ ѥстъ. Людии обитаѥтъ 60 тысѫщь.
 [[Category:Гради]]
 [[Катигорї:Блъгарї]]
 
