--- a/Асенѥвоградъ.mw
+++ b/Асенѥвоградъ.mw
@@ -1,4 +1,4 @@
-Асеновградъ ѥстъ градъ [[Блъгарї|Блъгарїѩ]].  Людии обитаѥтъ 40 тысѫщь.
+'''Асеновоградъ''' [[Блъгарї|Блъгарїѩ]] градъ ѥстъ.  Людии обитаѥтъ 40 тысѫщь.
 
 [[Category:Гради]]
 [[Category:Блъгарї]]
