--- a/Богъ.mw
+++ b/Богъ.mw
@@ -2,7 +2,7 @@
 
 [[Ѩзычьници]] мьнѧтъ, чьто ѥстъ мъножьство богъ.
 
-[[Июдеи]], [[Крьстиньство|крьстини]] и нѣции дрѹзии вѣрѹѭтъ, чьто  ѥстъ тъкъмо единъ Господь Богъ Вьседрьжитель, иже вьсь миръ сътвори.
+[[Июдеи]], [[Хрїстїаньство|хрїстїни]] и нѣции дрѹзии вѣрѹѭтъ, чьто  ѥстъ тъкъмо единъ Господь Богъ Вьседрьжитель, иже вьсь миръ сътвори.
 
 [[Безбожьство|Безбожьны]] людиѥ мьнѧтъ, чьто не сѫтъ богъ.
 
