*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -9,7 +9,7 @@
 | Людии = 142,2 леѡдръ
 | Почѧта = 1991 
 }}
-'''Рѡс''' или '''Рѡсискыи Съвѫ́зъ''' ({{Lang-ru|Россия, Российская Федерация}}) [[Еѵрѡпа|Еѵрѡпы]] въстока и [[Асї|Асїѩ]] сѣвера наибол҄ьши свѣта дрьжава ѥстъ. Рѡсїѩ стол҄ьнъ градъ [[Москъва]] ѥстъ. Наибол҄ьша града [[Москъва]] и [[Санкт-Петербѹргъ]] ѥсте. Рѡсїѩ дрьжавьнъ ѩзыкъ ѥстъ [[ѩзыкъ рѹсьскъ|рѹсьскъ ѩзыкъ]]. Рѡсїи людии 142,2 леѡдръ обитаѥтъ.
+'''Рѡсı́''' или '''Рѡсı́искыи Съвѫ́зъ''' ({{Lang-ru|Россия, Российская Федерация}}) [[Еѵрѡпа|Еѵрѡпы]] въстока и [[Асї|Асїѩ]] сѣвера наибол҄ьши свѣта дрьжава ѥстъ. Рѡсїѩ стол҄ьнъ градъ [[Москъва]] ѥстъ. Наибол҄ьша града [[Москъва]] и [[Санкт-Петербѹргъ]] ѥсте. Рѡсїѩ дрьжавьнъ ѩзыкъ ѥстъ [[ѩзыкъ рѹсьскъ|рѹсьскъ ѩзыкъ]]. Рѡсїи людии 142,2 леѡдръ обитаѥтъ.
 
 == Свѫзи чѧсти == <!--Субъекты федерации-->
 {{Planned}}
