--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -18,6 +18,8 @@
 * [[Вльгоградьска область]] 
 * [[Лениноградьска область]]
 * [[Москъвьска область]]
+* [[Нижѣновоградьска область]]
+* [[Новоградьска область]]
 * [[Новосибирьска область]]
 * [[Омьска область]]
 * [[Растовска область]]
