добавим немного ориссных выражений :)

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -11,6 +11,9 @@
 }}
 '''Рѡсı́''' или '''Рѡсı́искыи Съвѫ́зъ''' ({{Lang-ru|Россия, Российская Федерация}}) [[Еѵрѡпа|Еѵрѡпы]] въстока и [[Асї|Асїѩ]] сѣвера наибол҄ьши свѣта дрьжава ѥстъ. Рѡсїѩ стол҄ьнъ градъ [[Москъва]] ѥстъ. Наибол҄ьша града [[Москъва]] и [[Санкт-Петербѹргъ]] ѥсте. Рѡсїѩ дрьжавьнъ ѩзыкъ ѥстъ [[ѩзыкъ рѹсьскъ|рѹсьскъ ѩзыкъ]]. Рѡсїи людии 142,2 леѡдръ обитаѥтъ.
 
+== Їсторї ==
+
+1991 годѣ послѣди распада [[Съветскы Социалистичьскы Димократїѧ Съвѫзи]] Рѡсїискыи Съвѫзъ стала ѥстъ пакы самостотел҄ьна дрьжава
 == Свѫзи чѧсти == <!--Субъекты федерации-->
 {{Planned}}
 {| 
