--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -13,7 +13,8 @@
 
 == Їсторї ==
 
-1991 годѣ послѣди распада [[Съветскы Социалистичьскы Димократїѧ Съвѫзи]] Рѡсїискыи Съвѫзъ стала ѥстъ пакы самостотел҄ьна дрьжава
+1991 годѣ послѣди распада [[Съветскихъ Социалистичьскихъ Димократїѩ Съвѫзи]] Рѡсїискыи Съвѫзъ стала ѥстъ пакы самостотел҄ьна дрьжава
+
 == Свѫзи чѧсти == <!--Субъекты федерации-->
 {{Planned}}
 {| 
