--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -13,7 +13,7 @@
 
 == Їсторї ==
 
-1991 годѣ послѣди распада [[Съвѣтскыи Социалистичьскыи Димократїѩ Съвѫзи]] Рѡсїискыи Съвѫзъ стала ѥстъ пакы самостотел҄ьна дрьжава
+1991 годѣ послѣди распада [[Съвѣтскыи Социалистичьскыи Димократїѩ Съвѫзь|Съвѣтскыи Социалистичьскыи Димократїѩ Съвѫзи]] Рѡсїискыи Съвѫзъ стала ѥстъ пакы самостотел҄ьна дрьжава
 
 == Свѫзи чѧсти == <!--Субъекты федерации-->
 {{Planned}}
