--- a/Соумь.mw
+++ b/Соумь.mw
@@ -9,7 +9,7 @@
 |Людии = 5 219 732
 | Почѧта = 1917
 }}
-'''Сѹмь''' ([[cѹмьскъ ѩзыкъ|сѹмьскы]] ''Suomi'') [[Еѵрѡпа|Еѵрѡпы]] сѣвера дрьжава ѥстъ. Сѹми людии 5 219 732 обитаѥтъ. Дръжавьни ѩзыци Сѹмѩ ѥстъ [[Свеньскъ ѩзыкъ|ѩзыкъ свеньскъ]] и   [[Сѹмьскъ ѩзыкъ|ѩзыкъ сѹмьскъ]].
+'''Сѹмь''' ([[cѹмьскъ ѩзыкъ|сѹмьскы]] ''Suomi'') [[Еѵрѡпа|Еѵрѡпы]] сѣвера дрьжава ѥстъ. Сѹми людии 5 219 732 обитаѥтъ. Дръжавьни ѩзыци Сѹми [[Свеньскъ ѩзыкъ|ѩзыкъ свеньскъ]] и   [[Сѹмьскъ ѩзыкъ|ѩзыкъ сѹмьскъ]] ѥсте.
 
 [[Category:Страны]]
 
