--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -32,6 +32,7 @@
 * [[Томьска область]]
 * [[Ѹлиновьска область]]
 * [[Челѣбиньска область]]
+* [[рославл҄ьска область]]
 '''Кра'''
 * [[Пермьскъ краи]]
 | width="20px" |
