--- a/Срьбїꙗ.mw
+++ b/Срьбїꙗ.mw
@@ -11,7 +11,7 @@
 }}
 '''Срьбї''' ([[срьбьскъ ѩзыкъ|срьбьскы]]: ''Србија'' или ''Srbija'') ѥстъ страна и [[дрьжава]] срѣдьн̑ии [[Балкани|Балканъ]]. Стольнъ градъ ѥстъ [[Бѣлъ Градъ]]. Дрьжавьнъ ѩзыкъ Срьбїѩ [[срьбьскъ ѩзыкъ|срьбьскъ]] ѥстъ. Срьбїи людии 10 леѡдръ обитаѥтъ.
 
-== Історї ==
+== Їсторї ==
 
 Давѣ была самостотел҄ьна бѣаше, 1918 годѣ по [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше въ съставъ Кралѥвьства Срьбъ, Хръватъ и Словѣньць (послѣди именѹѥма [[Югослави]], по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]] же Социалистичьска  Съвѫзьна Димократї Югослави (ССДЮ) бѣаше). Послѣди распада ССДЮ въшьла бѣаше въ съвѫзьнѫ дрьжавѫ Срьбиѭ и Чрьногориѥ, 2006 годѣ по въсенародьна гласовани Чрьна Гора и Срьбї стали ѥсте пакы самостотел҄ьны дрьжавы.
 
