*Empty MediaWiki Message*

--- a/Томьска_область.mw
+++ b/Томьска_область.mw
@@ -1,4 +1,4 @@
-[[Видъ:TomskOblastFlag.png|thumb|right|275px|Томьскы области знакъ]]
+[[Видъ:TomskOblastFlag.png|thumb|right|275px|Томьскы области знамѧ]]
 '''Томьска область''' [[Рѡсї|Рѡсїѩ]] область ѥсть. Главьнъ градъ Томьскы области [[Томьскъ]] ѥсть. Людии 1 леѡдръ обитаѥтъ. Въшьла бѣаше въ съставъ Новосибирьскы области. Послѣди лѣта 1944 аѵгѹста 13 числа самостотел҄ьна область сътворѥна ѥстъ . 
 
 [[Category:Рѡсї]]
