*Empty MediaWiki Message*

--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Санкт-Петербѹргъ
 | знамѧ= [[Видъ:Flag of St Petersburg (Russia).png|100 px]]
 | знакъ = [[Видъ:Coat of Arms of Saint Petersburg large (2003).png|100px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 4500 тысѫщь
 | Основанъ = 1703
