*Empty MediaWiki Message*

--- a/Нижьн҄ии_Новъ_Градъ.mw
+++ b/Нижьн҄ии_Новъ_Градъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Нижьн҄ии Новъ Градъ
 | знамѧ= [[Видъ:Flag Nizhny Novgorod.gif|100 px]]
 | знакъ = [[Видъ:Coat of arms Nizhny Novgorod.gif|80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1284 тысѧщи
 | Основанъ = 1221
