--- a/Москъва.mw
+++ b/Москъва.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Москъва
 | знамѧ= [[Видъ:Flag of Moscow (Russia).png|100 px]]
 | знакъ = [[Видъ:Coat of Arms of Moscow.png|80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 10.472.629 
 | Основанъ = 1147
