*Empty MediaWiki Message*

--- a/Омьскъ.mw
+++ b/Омьскъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Омьскъ
 | знамѧ= [[Видъ:Flag_of_Omsk.png|100 px]]
 | знакъ = [[Видъ:Coat_of_Arms_of_Omsk.png|80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии =  1129 тысѫщь
 | Основанъ = 1716
