--- a/Оуфа.mw
+++ b/Оуфа.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Ѹфа
 | знамѧ= 
 | знакъ = [[Видъ:Ufa_gerb.gif|80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1029 тысѫщь
 | Основанъ = 1586
