--- a/Каꙁанъ.mw
+++ b/Каꙁанъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Казань
 | знамѧ= [[Видъ:Zilant.GIF|100 px]]
 | знакъ = [[Видъ:Coat_of_Arms_of_Kazan_(Tatarstan)_(2004).png|80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1110 тысѧщь
 | Основанъ = 1005
