*Empty MediaWiki Message*

--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Челѣбиньскъ
 | знамѧ= [[Видъ:Flag_of_Chelyabinsk.png|100 px]]
 | знакъ = [[Видъ:Coat_of_Arms_of_Chelyabinsk_(2000).png|80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1093 тысѫщѧ
 | Основанъ = 1736
