--- a/Самара.mw
+++ b/Самара.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Самара
 | знамѧ= [[Видъ:Flag_of_Samara_(Samara_oblast).png|100 px]]
 | знакъ = [[Видъ:Coat_of_Arms_of_Samara_(Samara_oblast).png|80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 1133 тысѫщи
 | Основанъ = 1586
