*Empty MediaWiki Message*

--- a/Сосновꙑи_Боръ.mw
+++ b/Сосновꙑи_Боръ.mw
@@ -1,7 +1,7 @@
 {{Градъ|name = Сосньнъ Боръ
 | знамѧ= [[Видъ:Flag of Leningrad Oblast.svg|100 px]]
 | знакъ = [[Видъ:Coat_of_Arms_of_Sosnovy_Bor_(Leningrad_oblast).png|80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 67 тысѫщь
 | Основанъ = 1958
