--- a/Томьскъ.mw
+++ b/Томьскъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|name =  Томьскъ
 | знамѧ= [[Видъ:Tomsk city flag.png|100 px]]
 | знакъ = [[Видъ:Tomsk_city_coat_of_arms.png |80 px]]
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
 | Глава = 
 | Людии = 512 600 ([[2005]])
 | Основанъ = [[1604]]
