--- a/Вєлика_Британїꙗ.mw
+++ b/Вєлика_Британїꙗ.mw
@@ -9,7 +9,7 @@
 | Людии = 60 леѡдръ
 | Почѧта = 1801
 }}
-'''Велика Британї''' ({{Lang-en|Great Britain}}) или '''Ѥдьнѥно Кралѥ́вьство Великы Британїѩ и Сѣверьны Ирландїѩ''' ({{Lang-en|The United Kingdom of Great Britain and Northern Ireland}})  [[Еѵрѡпа|Еѵрѡпы]] сѣвера  дрьжава ѥстъ. Великы Британїѩ стол҄ьнъ градъ [[Лондон]] ѥстъ.  Великы Британїѩ  дрьжавьнъ ѩзыкъ ѥстъ [[англїискъ ѩзыкъ|англїискъ ѩзыкъ]]. Великы Британїи людии 60 леѡдръ обитаѥтъ.
+'''Велика Британї''' ({{Lang-en|Great Britain}}) или '''Ѥдьнѥно Кралѥ́вьство Великы Британїѩ и Сѣверьны Ирландїѩ''' ({{Lang-en|The United Kingdom of Great Britain and Northern Ireland}})  [[Еѵрѡпа|Еѵрѡпы]] сѣвера  дрьжава ѥстъ. Великы Британїѩ стол҄ьнъ градъ [[Лондон]] ѥстъ. Великы Британїѩ дрьжавьнъ [[англїискъ ѩзыкъ|англїискъ ѩзыкъ]] ѥстъ. Велицѣи Британїи людии 60 леѡдръ обитаѥтъ.
 
 [[Category:Еѵрѡпа]]
 [[Category:Страны]]
