--- a/Норєгъ.mw
+++ b/Норєгъ.mw
@@ -1,3 +1,16 @@
-'''Норьга''' ([[Норьскъ ѩзыкъ|норьски]] ''Norge'') дрьжава Севернѩ Еѵрѡпы ѥстъ, стольнъ градъ ѥѩ [[Осло]] ѥстъ.
-
+{{Дрьжава|name =  Норьга
+| знамѧ= [[Видъ:Flag of Norway.svg|150px]]
+| знакъ = [[image:Coat of Arms of Norway.svg|80px]]
+| map = [[image:Europe location NOR.png|300px]] 
+| Стол҄ьнъ градъ = [[Осло]]
+| Ѩзыкъ = [[норьскъ ѩзыкъ|норьскъ]]
+| Глава = 
+| area =
+| Людии = 4,6 леѡдръ
+| Почѧта = 1905
+}}
+'''Норьга''' ([[Норьскъ ѩзыкъ|норьски]] ''Kongeriket Norge/Noreg'') дрьжава Севернѩ Еѵрѡпы ѥстъ, стольнъ градъ ѥѩ [[Осло]] ѥстъ. Норьгы дрьжавьнъ [[норьскъ ѩзыкъ|норьскъ ѩзыкъ]] ѥстъ. Норьгѣ людии 4,6 леѡдръ обитаѥтъ.
+[[Category:Страны]]
+[[Category:Еѵрѡпа]]
+[[ru:Норвегия]]
 {{stub}}
