--- a/Норєгъ.mw
+++ b/Норєгъ.mw
@@ -9,7 +9,7 @@
 | Людии = 4,6 леѡдръ
 | Почѧта = 1905
 }}
-'''Норьга''' ([[Норьскъ ѩзыкъ|норьски]] ''Kongeriket Norge/Noreg'') дрьжава Севернѩ Еѵрѡпы ѥстъ, стольнъ градъ ѥѩ [[Осло]] ѥстъ. Норьгы дрьжавьнъ [[норьскъ ѩзыкъ|норьскъ ѩзыкъ]] ѥстъ. Норьгѣ людии 4,6 леѡдръ обитаѥтъ.
+'''Норьга''' ([[Норьскъ ѩзыкъ|норьски]] ''Kongeriket Norge/Noreg'') Еѵрѡпы сѣвера дрьжава ѥстъ, стольнъ градъ ѥѩ [[Осло]] ѥстъ. Норьгы дрьжавьнъ [[норьскъ ѩзыкъ|норьскъ ѩзыкъ]] ѥстъ. Норьгѣ людии 4,6 леѡдръ обитаѥтъ.
 [[Category:Страны]]
 [[Category:Еѵрѡпа]]
 [[ru:Норвегия]]
