--- a/Вєлика_Британїꙗ.mw
+++ b/Вєлика_Британїꙗ.mw
@@ -2,14 +2,14 @@
 | знамѧ= [[Видъ:Flag of the United Kingdom.svg|150px]]
 | знакъ = [[image:Coat of arms of the United Kingdom.png|80px]]
 | map = [[image:EU location UK.png|300px]] 
-| Стол҄ьнъ градъ = [[Лондон]]
+| Стол҄ьнъ градъ = [[Лондонъ]]
 | Ѩзыкъ = [[англїискъ ѩзыкъ|англїискъ]]
 | Глава = 
 | area =
 | Людии = 60 леѡдръ
 | Почѧта = 1801
 }}
-'''Велика Британї''' ({{Lang-en|Great Britain}}) или '''Ѥдьнѥно Кралѥ́вьство Великы Британїѩ и Сѣверьны Ирландїѩ''' ({{Lang-en|The United Kingdom of Great Britain and Northern Ireland}})  [[Еѵрѡпа|Еѵрѡпы]] сѣвера  дрьжава ѥстъ. Великы Британїѩ стол҄ьнъ градъ [[Лондон]] ѥстъ. Великы Британїѩ дрьжавьнъ [[англїискъ ѩзыкъ|англїискъ ѩзыкъ]] ѥстъ. Велицѣи Британїи людии 60 леѡдръ обитаѥтъ.
+'''Велика Британї''' ({{Lang-en|Great Britain}}) или '''Ѥдьнѥно Кралѥ́вьство Великы Британїѩ и Сѣверьны Ирландїѩ''' ({{Lang-en|The United Kingdom of Great Britain and Northern Ireland}})  [[Еѵрѡпа|Еѵрѡпы]] сѣвера  дрьжава ѥстъ. Великы Британїѩ стол҄ьнъ градъ [[Лондонъ]] ѥстъ. Великы Британїѩ дрьжавьнъ [[англїискъ ѩзыкъ|англїискъ ѩзыкъ]] ѥстъ. Велицѣи Британїи людии 60 леѡдръ обитаѥтъ.
 
 [[Category:Еѵрѡпа]]
 [[Category:Страны]]
