Блазны исправихъ и нѣчьто помѣнихъ

--- a/Норєгъ.mw
+++ b/Норєгъ.mw
@@ -9,7 +9,7 @@
 | Людии = 4,6 леѡдръ
 | Почѧта = 1905
 }}
-'''Норьга''' ([[Норьскъ ѩзыкъ|норьски]] ''Kongeriket Norge/Noreg'') [[Еѵрѡпа|Еѵрѡпы]] сѣвера дрьжава ѥстъ, стол҄ьнъ градъ ѥѩ [[Осло]] ѥстъ. Норьгы дрьжавьнъ [[норьскъ ѩзыкъ|норьскъ ѩзыкъ]] ѥстъ. Норьѕѣ людии 4,6 леѡдръ обитаѥтъ.
+'''Кралѥвьсво Норегъ''' (''Kongeriket Norge'' [[норьскъ ѩзык|кънижьнонорьскы]] или ''Kongeriket Noreg'' [[норьскъ ѩзыкъ|новонорьскы]]) [[Еѵрѡпа|Еѵрѡпы]] сѣвера дрьжава ѥстъ. Норега стол҄ьнъ градъ [[Осло]] ѥстъ. Норега дрьжавьнъ [[норьскъ ѩзыкъ]] ѥстъ. Нореѕѣ людии 4,6 леѡдръ обитаѥтъ.
 [[Category:Страны]]
 [[Category:Еѵрѡпа]]
 [[ru:Норвегия]]
