--- a/Норєгъ.mw
+++ b/Норєгъ.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name =  Норьга
+{{Дрьжава|name =  Норегъ
 | знамѧ= [[Видъ:Flag of Norway.svg|150px]]
 | знакъ = [[image:Coat of Arms of Norway.svg|80px]]
 | map = [[image:Europe location NOR.png|300px]] 
