--- a/Норєгъ.mw
+++ b/Норєгъ.mw
@@ -9,7 +9,7 @@
 | Людии = 4,6 леѡдръ
 | Почѧта = 1905
 }}
-'''Кралѥвьсво Норегъ''' (''Kongeriket Norge'' [[норьскъ ѩзык|кънижьнонорьскы]] или ''Kongeriket Noreg'' [[норьскъ ѩзыкъ|новонорьскы]]) [[Еѵрѡпа|Еѵрѡпы]] сѣвера дрьжава ѥстъ. Норега стол҄ьнъ градъ [[Осло]] ѥстъ. Норега дрьжавьнъ [[норьскъ ѩзыкъ]] ѥстъ. Нореѕѣ людии 4,6 леѡдръ обитаѥтъ.
+'''Кралѥвьство Норегъ''' (''Kongeriket Norge'' [[норьскъ ѩзык|кънижьнонорьскы]] или ''Kongeriket Noreg'' [[норьскъ ѩзыкъ|новонорьскы]]) [[Еѵрѡпа|Еѵрѡпы]] сѣвера дрьжава ѥстъ. Норега стол҄ьнъ градъ [[Осло]] ѥстъ. Норега дрьжавьнъ [[норьскъ ѩзыкъ]] ѥстъ. Нореѕѣ людии 4,6 леѡдръ обитаѥтъ.
 [[Category:Страны]]
 [[Category:Еѵрѡпа]]
 [[ru:Норвегия]]
