*Empty MediaWiki Message*

--- a/Карпатьскословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Карпатьскословѣньскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Карпатьско-словѣньскъ ѩзыкъ''' (карпатьско-словѣньскы: ''slovenčina'') ѥстъ ѩзыкъ западьнословѣньскаѥго извода словѣньскаѥго дрѣвесе ѩзыкъ. Глаголѭщь людии же с҄имь ѩзыкомь  5 леѡдръ сѫтъ. Словѣньскы назъванъ «карпатьско-словѣньскъ» да бѣжали бѫ о съмѣшени съ [[Їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскыимъ ѩзыкомъ]] .
+'''Карпатьско-словѣньскъ ѩзыкъ''' (карпатьско-словѣньскы: ''slovenčina'') ѥстъ ѩзыкъ западьнословѣньскаѥго извода словѣньскаѥго дрѣвесе ѩзыкъ. [[Словѣньскы|Словѣньско]] дрьжавьнъ ѩзыкъ ѥстъ. Глаголѭщь людии же с҄имь ѩзыкомь  5 леѡдръ сѫтъ. Словѣньскы назъванъ «карпатьско-словѣньскъ» да бѣжали бѫ о съмѣшени съ [[Їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскыимъ ѩзыкомъ]] .
 == Карпатьско-словѣньска азъбѹкы  ==
 
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
