/* Карпатьско-словѣньска азъбѹкы */

--- a/Карпатьскословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Карпатьскословѣньскъ_ѩꙁꙑкъ.mw
@@ -2,7 +2,7 @@
 == Карпатьско-словѣньска азъбѹкы  ==
 
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Аа Áá Ää Bb Cc Dd Ďď Dzdz Dždž Ee Éé Ff Gg Hh Chch Ii Íí Jj Kk Ll Ĺĺ Ľľ Mm Nn Ňň Oo Óó Ôô Pp Qq Rr Ŕŕ Ss Šš Tt Ťť Uu Úú Vv Ww Xx Yy Ýý Zz Žž
+Аа Áá Ää Bb Cc Čč Dd Ďď Dzdz Dždž Ee Éé Ff Gg Hh Chch Ii Íí Jj Kk Ll Ĺĺ Ľľ Mm Nn Ňň Oo Óó Ôô Pp Qq Rr Ŕŕ Ss Šš Tt Ťť Uu Úú Vv Ww Xx Yy Ýý Zz Žž
 </div>
 
 == Зьри такожде ==
