--- a/Котъ.mw
+++ b/Котъ.mw
@@ -1,5 +1,5 @@
-
-Котъ (''домащьн҄ь котъ''; [[Латиньскъ ѩзыкъ|латиньскы]] ''Fēlis silvestris cātus'') [[котьска сѣми|котьскы сѣмиѩ]] звѣрь ѥстъ.
+[[Видъ:Black hills cat-tochichi.jpg|thumb|Котъ]]
+'''Котъ''' (''домащьн҄ь котъ''; [[Латиньскъ ѩзыкъ|латиньскы]] ''Fēlis silvestris cātus'') [[котьска сѣми|котьскы сѣмиѩ]] звѣрь ѥстъ.
 
 == Зьри такоже ==
 * [[Дивии котъ]]
