--- a/Ладожьско_ѥꙁєро.mw
+++ b/Ладожьско_ѥꙁєро.mw
@@ -1,2 +1,3 @@
 [[Видъ:La2-demis-ladoga.png|right|thumb|200px|Ладожьско ѥзеро хартѣ]]
 '''Ладожьско ѥзеро''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ладожское озеро''; давѣ нарицаѥмо '''Нево''') [[Рѡсї|Рѡсїи]] ѥзеро ѥстъ. Ладожьскаѥго ѥзера бол҄ии островъ [[Валамъ]]. Ладожьскоѥ ѥзеро болѥ вьс҄ѣхъ [[Еѵрѡпа|Еѵрѡпѣ]] ѥстъ.
+[[ru:Ладожское озеро]]
