*Empty MediaWiki Message*

--- a/Срьби_(южьни).mw
+++ b/Срьби_(южьни).mw
@@ -1,3 +1,4 @@
 '''Срьби''' ([[срьбьскъ ѩзыкъ|срьбьскы]] ''Срби'', нарицаѥми словѣньскы «южьни», да бѣжали о съмѣшени съ Лѹжичьскыихъ срьбъ именьмь бѫ) южьнословѣньскъ народъ ѥстъ.
 
 [[Category:Словѣне]]
+[[ru:Сербы]]
