*Empty MediaWiki Message*

--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -16,3 +16,4 @@ Image:Coat of Arms of Chelyabinsk (1994).png|Челѣбиньска древль
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
+[[ru:Челябинск]]
