*Empty MediaWiki Message*

--- a/Атъꙁанъ_Єтрватъфѫтєнъ.mw
+++ b/Атъꙁанъ_Єтрватъфѫтєнъ.mw
@@ -1,4 +1,4 @@
-Aтъзанъ-Eтрѹатфѫтенъ  село [[Франкї|Франкїи]] ѥстъ ([[франкїискы]] Athesans-Étroitefontaine).
+Aтъзанъ-Eтрѹатфѫтенъ  село [[Франкї|Франкїи]] ѥстъ ([[Франкїискъ ѩзыкъ|франкїискы]] Athesans-Étroitefontaine).
 Въ  Aтъзанѣ-Eтрѹатфѫтенѣ людии обитаѥтъ 575 (2005).
 Почѧта ѥстъ 70110 
 
