*Empty MediaWiki Message*

--- a/Атъꙁанъ_Єтрватъфѫтєнъ.mw
+++ b/Атъꙁанъ_Єтрватъфѫтєнъ.mw
@@ -1,5 +1,5 @@
 Aтъзанъ-Eтрѹатфѫтенъ  село [[Франкї|Франкїи]] ѥстъ ([[Франкїискъ ѩзыкъ|франкїискы]] Athesans-Étroitefontaine).
-Въ  Aтъзанѣ-Eтрѹатфѫтенѣ людии обитаѥтъ 575 (2005).
+Въ  Aтъзанѣ-Eтрѹатфѫтенѣ людии обитаѥтъ 575 (2005 г.).
 Почѧта ѥстъ 70110 
 
 [[bg:Атесан-Етроатфонтен]]
