--- a/Нѣмьчьскъ_ѩꙁꙑкъ.mw
+++ b/Нѣмьчьскъ_ѩꙁꙑкъ.mw
@@ -8,5 +8,8 @@ Aa (Ää) Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo (Öö) Pp Qq Rr Ss (ß) Tt U
 
 == Зьри такожде ==
 {{InterWiki|de|Hauptseite||Нѣмьчьскыимь}}
+
 [[Катигорї:Ѩзыци]]
+
+[[de:Deutsche Sprache]]
 [[ru:Немецкий язык]]
