*Empty MediaWiki Message*

--- a/Норєгъ.mw
+++ b/Норєгъ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name =  Норегъ
 | знамѧ= [[Видъ:Flag of Norway.svg|150px]]
 | знакъ = [[image:Coat of Arms of Norway.svg|80px]]
-| map = [[image:Europe location NOR.png|300px]] 
+| map = Europe location NOR.png
 | Стол҄ьнъ градъ = [[Осло]]
 | Ѩзыкъ = [[норьскъ ѩзыкъ|норьскъ]]
 | Глава = 
