*Empty MediaWiki Message*

--- a/Їспанїꙗ.mw
+++ b/Їспанїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Їспанї
 | знамѧ= [[Видъ:Flag of Spain.svg|150px]]
 | знакъ = [[image:Escudo de España.png|80px]]
-| map = [[image:LocationSpain.svg|300px]] 
+| map = LocationSpain.svg 
 | Стол҄ьнъ градъ = [[Мадрїдъ]]
 | Ѩзыкъ = [[Їспаньскъ ѩзык|їспаньскъ]] 
 | Глава = 
