--- a/Вєлика_Британїꙗ.mw
+++ b/Вєлика_Британїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Велика Британї 
 | знамѧ= [[Видъ:Flag of the United Kingdom.svg|150px]]
 | знакъ = [[image:Coat of arms of the United Kingdom.png|80px]]
-| map = [[image:EU location UK.png|300px]] 
+| map = EU location UK.png 
 | Стол҄ьнъ градъ = [[Лондонъ]]
 | Ѩзыкъ = [[англїискъ ѩзыкъ|англїискъ]]
 | Глава = 
