*Empty MediaWiki Message*

--- a/Їталїꙗ.mw
+++ b/Їталїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Италї
 | знамѧ= [[Видъ:Flag of Italy.svg|150px]]
 | знакъ = [[image:Italy-Emblem.svg|80px]]
-| map = [[image:LocationItaly.svg|300px]] 
+| map = LocationItaly.svg
 | Стол҄ьнъ градъ = [[Римъ]]  
 | Ѩзыкъ = [[Италїискъ ѩзыкъ|италїискъ]]
 | Глава = 
