*Empty MediaWiki Message*

--- a/Франкїꙗ.mw
+++ b/Франкїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Франкї
 | знамѧ= [[Видъ:Flag of France.svg|150px]]
 | знакъ = [[image:France coa.png|80px]]
-| map = [[image:LocationFrance.svg|300px]] 
+| map = LocationFrance.svg
 | Стол҄ьнъ градъ = [[Парижь]]
 | Ѩзыкъ = [[Франкїискъ ѩзыкъ|франкїискъ]]
 | Глава = 
