*Empty MediaWiki Message*

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Ѹкраина
 | знамѧ= [[Видъ:Flag of Ukraine.svg|150px]]
 | знакъ = [[image:Coat of arms of Ukraine.svg|100px]]
-| map = [[image:LocationUkraine.svg|300px]] 
+| map = LocationUkraine.svg 
 | Стол҄ьнъ градъ = [[Кыѥвъ]]
 | Ѩзыкъ = [[Ѩзыкъ ѹкраиньскъ|ѹкраиньскъ]]
 | Глава = [[Вікторъ Ющенко]]
