*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Рѡсїискыи Съвѫзъ 
 | знамѧ= [[Видъ:Flag of Russia.svg|150px]]
 | знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
-| map = [[image:Rs-map-slovensky.png|300px]] 
+| map = Rs-map-slovensky.png
 | Стол҄ьнъ градъ = [[Москъва]]
 | Ѩзыкъ = [[ѩзыкъ рѹсьскъ|рѹсьскъ ѩзыкъ]]
 | Глава = [[Владимиръ Пѹтинъ]]
