*Empty MediaWiki Message*

--- a/Свєньско.mw
+++ b/Свєньско.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Свеньско
 | знамѧ= [[Видъ:Flag of Sweden.svg|150px]]
 | знакъ = [[image:Sweden greater coa1908.png|80px]]
-| map = [[image:LocationSweden.svg|300px]] 
+| map = LocationSweden.svg 
 | Стол҄ьнъ градъ = [[Стоколмъ]] 
 | Ѩзыкъ = [[Свеньскъ ѩзыкъ|свеньскъ]] 
 | Глава = 
