*Empty MediaWiki Message*

--- a/Ватиканъ.mw
+++ b/Ватиканъ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Ватиканъ
 | знамѧ= [[Видъ:Flag of the Vatican City.svg|150px]]
 | знакъ = [[image:Emblem of the Papacy.svg|80px]]
-| map = [[image:LocationVaticanCity.png|300px]] 
+| map = LocationVaticanCity.png
 | Стол҄ьнъ градъ = Ватиканъ 
 | Ѩзыкъ = [[Латиньскъ ѩзыкъ|латиньскъ]]
 | Глава = 
