*Empty MediaWiki Message*

--- a/Кѷпръ.mw
+++ b/Кѷпръ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Кѷпръ
 | знамѧ= [[Видъ:Flag_of_Cyprus.svg|150px]]
 | знакъ = [[image:Cyprus Coat of Arms.png|80px]]
-| map = [[image:LocationCyprus.svg|300px]] 
+| map = LocationCyprus.svg
 | Стол҄ьнъ градъ = 
 | Ѩзыкъ = 
 | Глава = 
