*Empty MediaWiki Message*

--- a/Срьбїꙗ.mw
+++ b/Срьбїꙗ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Срьбї
 | знамѧ= [[Видъ:Flag of Serbia.svg|150px]]
 | знакъ = [[image:Coat of arms of Serbia.svg|80px]]
-| map = [[image:Europe location SRB.png|300px]] 
+| map = Europe location SRB.png 
 | Стол҄ьнъ градъ = [[Бѣлъ Градъ]]
 | Ѩзыкъ = [[срьбьскъ ѩзыкъ|срьбьскъ]]
 | Глава = 
