*Empty MediaWiki Message*

--- a/Срѣдинꙗнє.mw
+++ b/Срѣдинꙗнє.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Срѣдинне
 | знамѧ= [[Видъ:Flag of China.svg|150px]]
 | знакъ = [[image:China guohui.png|80px]]
-| map = [[image:LocationPRChina.png|300px]] 
+| map = LocationPRChina.png 
 | Стол҄ьнъ градъ = [[Беи-Ѕин ]]  
 | Ѩзыкъ = [[срѣдиньскъ ѩзыкъ|срѣдиньскъ]]
 | Глава = 
