*Empty MediaWiki Message*

--- a/Мѫголи.mw
+++ b/Мѫголи.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Мѫголи
 | знамѧ= [[Видъ:Flag of Mongolia.svg|150px]]
 | знакъ = [[image:Mongolia coa.gif|80px]]
-| map = [[image:LocationMongolia.png|300px]] 
+| map = LocationMongolia.png
 | Стол҄ьнъ градъ = Ѹлан-Баторъ
 | Ѩзыкъ = 
 | Глава = 
