*Empty MediaWiki Message*

--- a/Канада.mw
+++ b/Канада.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Канада
 | знамѧ= [[Видъ:Flag of Canada.svg|150px]]
-| знакъ = [[image:Bigcancoat.png|80px]]
-| map = [[image:LocationCanada.svg|300px]] 
+| знакъ = 
+| map = LocationCanada.svg 
 | Стол҄ьнъ градъ = [[Оттава]] 
 | Ѩзыкъ = [[Франкїискъ ѩзыкъ|франкїискъ]], [[Англїискъ ѩзыкъ|англїискъ]]
 | Глава = 
