*Empty MediaWiki Message*

--- a/Литъва.mw
+++ b/Литъва.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Литъва
 | знамѧ= [[Видъ:Flag_of_Lithuania.svg|150px]]
 | знакъ = [[image:Coat of arms of Lithuania.png|80px]]
-| map = [[image:LocationLithuania.svg|300px]] 
+| map = LocationLithuania.svg
 | Стол҄ьнъ градъ = [[Вилн҄ь]] 
 | Ѩзыкъ = [[Литъвьскъ ѩзыкъ|литъвьскъ]]
 | Глава = 
