*Empty MediaWiki Message*

--- a/Нѣмьци.mw
+++ b/Нѣмьци.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Нѣмьци
 | знамѧ= [[Видъ:Flag of Germany.svg|150px]]
 | знакъ = [[image:Coat of Arms of Germany.svg|80px]]
-| map = [[image:LocationGermany.svg|300px]] 
+| map = LocationGermany.svg 
 | Стол҄ьнъ градъ = [[Берлинъ]]  
 | Ѩзыкъ = [[Нѣмьчьскъ ѩзыкъ|нѣмьчьскъ]] 
 | Глава = 
