--- a/Соумь.mw
+++ b/Соумь.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Сѹмь
 | знамѧ= [[Видъ:Flag of Finland.svg|150px]]
 | знакъ = [[image:Coat of arms of Finland.svg|80px]]
-| map = [[image:LocationFinland.svg|300px]] 
+| map = LocationFinland.svg 
 | Стол҄ьнъ градъ = 
 | Ѩзыкъ = [[Сѹмьскъ ѩзыкъ|сѹмьскъ]], [[Свеньскъ ѩзыкъ|свеньскъ]]
 | Глава = 
