*Empty MediaWiki Message*

--- a/Чрьна_Гора.mw
+++ b/Чрьна_Гора.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Чрьна Гора
 | знамѧ= [[Видъ:Flag of Montenegro.svg|150px]]
 | знакъ = [[image:Coat of arms of Montenegro.svg|80px]]
-| map = [[image:LocationMontenegro.svg|300px]] 
+| map = LocationMontenegro.svg
 | Стол҄ьнъ градъ = [[Подъгорица]]
 | Ѩзыкъ = [[срьбьскъ ѩзыкъ|срьбьскъ]]
 | Глава = 
