*Empty MediaWiki Message*

--- a/Чєшьско.mw
+++ b/Чєшьско.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Чешьско
 | знамѧ= [[Видъ:Flag of the Czech Republic.svg|150px]]
 | знакъ = [[image:Coat of arms of the Czech Republic.svg|80px]]
-| map = [[image:EU location CZE.png|300px]] 
+| map = EU location CZE.png
 | Стол҄ьнъ градъ = [[Прага]]
 | Ѩзыкъ = [[Чешьскъ ѩзыкъ|чешьскъ]]
 | Глава = 
