*Empty MediaWiki Message*

--- a/Хръватьска.mw
+++ b/Хръватьска.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Хръватьска
 | знамѧ= [[Видъ:Flag_of_Croatia.svg|150px]]
 | знакъ = [[image:Croatian Coat of Arms.svg|80px]]
-| map = [[image:LocationCroatia.svg|300px]] 
+| map = LocationCroatia.svg 
 | Стол҄ьнъ градъ = [[Загребъ]]  
 | Ѩзыкъ = [[хръватьскъ ѩзыкъ|хрьватьскъ]] 
 | Глава = 
