*Empty MediaWiki Message*

--- a/Сѷрїꙗ.mw
+++ b/Сѷрїꙗ.mw
@@ -1,7 +1,7 @@
-{{Дрьжава|name = Сѵрї
+{{Дрьжава|name = Сѷрї
 | знамѧ= [[Видъ:Flag_of_Syria.svg|150px]]
 | знакъ = [[image:COA of Syria.svg|80px]]
-| map = [[image:LocationSyria.png|300px]] 
+| map = LocationSyria.png
 | Стол҄ьнъ градъ = [[Дамаскъ]]  
 | Ѩзыкъ = [[Аравьскъ ѩзыкъ|аравьскъ]] 
 | Глава = 
@@ -9,9 +9,9 @@
 | Людии =  
 | Почѧта = 
 }}
-'''Сѵрї''' ('''Сѹрї''', [[Ѩзыкъ аравьскъ|аравьскы]]: سورية‎ ​) дрьжава западьнѣи [[Асї|Асїи]] ѥстъ. Стольнъ и наиболии градъ Сѵрїѩ [[Дамаскъ]] ѥстъ. Ѥѩ дрьжавьнъ ѩзыкъ ѥстъ [[Ѩзыкъ аравьскъ|аравьскъ ѩзыкъ]]. 
+'''Сѷрї''' ('''Сѹрї''', [[Ѩзыкъ аравьскъ|аравьскы]]: سورية‎ ​) дрьжава западьнѣи [[Асї|Асїи]] ѥстъ. Стольнъ и наиболии градъ Сѷрїѩ [[Дамаскъ]] ѥстъ. Ѥѩ дрьжавьнъ ѩзыкъ ѥстъ [[Ѩзыкъ аравьскъ|аравьскъ ѩзыкъ]]. 
 
-[[Category:Сѵрї]]
+[[Category:Сѷрї|*]]
 
 [[af:Sirië]]
 [[an:Siria]]
