--- a/Дамаскъ.mw
+++ b/Дамаскъ.mw
@@ -1,7 +1,7 @@
-'''Дамаскъ''' ([[Ѩзыкъ аравьскъ|аравьскы]]:دمشق ) стольнъ и наиболии градъ [[Сѵрї|Сѵрїѩ]] ѥстъ.
+'''Дамаскъ''' ([[Ѩзыкъ аравьскъ|аравьскы]]:دمشق ) стольнъ и наиболии градъ [[Сѷрї|Сѷрїѩ]] ѥстъ.
 
 [[Category:Гради]]
-[[Category:Сѵрї]]
+[[Category:Сѷрї]]
 
 [[am:ደማስቆ]]
 [[ar:دمشق]]
